--- a/livekit-server/templates/ingress.yaml
+++ b/livekit-server/templates/ingress.yaml
@@ -54,19 +54,21 @@ spec:
               number: {{ $svcPort }}
   {{- end }}
   {{- end }}
-{{- with .Values.loadBalancer }}
-  {{- if .tls }}
-  tls:
-    {{- range .tls }}
-    {{- if .hosts }}
-    - hosts:
-        {{- range .hosts }}
-        - {{ . | quote }}
+{{- if ne .Values.loadBalancer.type "gke-vpc-native" }}
+  {{- with .Values.loadBalancer }}
+    {{- if .tls }}
+    tls:
+      {{- range .tls }}
+      {{- if .hosts }}
+      - hosts:
+          {{- range .hosts }}
+          - {{ . | quote }}
+          {{- end }}
+        {{- if .secretName }}
+        secretName: {{ .secretName | quote }}
         {{- end }}
-      {{- if .secretName }}
-      secretName: {{ .secretName | quote }}
       {{- end }}
-    {{- end }}
+      {{- end }}
     {{- end }}
   {{- end }}
 {{- end }}
